force-app/main/default/objects/ProductSkill__c/ProductSkill__c.object-meta.xml
<CustomObject>
    <description>Compétences nécessaire pour un produit</description>
    <label>Compétence de produit</label>
    <nameField>
        <displayFormat>PS/{YYYY}/{000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compétences de produit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>