force-app/main/default/objects/ProductSkill__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produit</description>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Compétences de produit</relationshipLabel>
    <relationshipName>Competences_de_produit</relationshipName>
    <type>Lookup</type>
</CustomField>