force-app/main/default/objects/ProductSkill__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <description>Id Salesforce de la compétence</description>
    <externalId>true</externalId>
    <label>Compétence (ID)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>