force-app/main/default/objects/ProductSkill__c/fields/skillLevel__c.field-meta.xml
<CustomField>
    <fullName>skillLevel__c</fullName>
    <label>Niveau requis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>